deploy/kubernetes/m29/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: schemabridge-system
  labels:
    app.kubernetes.io/part-of: schemabridge
    schemabridge.io/environment: production
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.30
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.30
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.30
